@@ -1,5 +1,6 @@
 1.01	2017-04-24
-		- 
+		- POD fixes and changes
+		- autohistory feature by minline
 
 1.00	2017-04-22
 		- First release
